# omiocnc-x6-2200epl

./: .gitignore  404.html  AUTHORS.md  CHANGELOG  CHANGELOG.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci-changelog.yml  publish-docs.yml
authors/: index.html
cam/: index.html
changelog/: index.html
checklists/: index.html
checklists/sample/: index.html
docs/: authors.md  changelog.md  index.md  references.md
docs/cam/: coppercam.md  f360.md  index.md
docs/checklists/: index.md
docs/drawio-exporter/: 2a2139fa3814c5012141d7b62cfd77fcfa9b2ab5-0
docs/firmware/: index.md
docs/gcode/: index.md  warmup-full.md  warmup-spindle.md
docs/hardware/: controller.md  cooling.md  index.md  overview.md  spindle.md
docs/mods/: air.md  cooling.md  index.md  shield.md
docs/mods/diagrams/: cooling.drawio
docs/pcb/: index.md
firmware/: english parameter list.txt  index.html  setting
gcode/: index.html  warmup-full.ncc  warmup-spindle.ncc
gcode/pcb/: Feedrate_trial.gcode  IsolationRouterCalibration.gbr
hardware/: index.html
hardware/controller/: index.html
hardware/spindle/: index.html
license/: index.html
mods/: index.html
mods/air/: index.html
mods/cooling/: index.html
mods/fixture-plate/: index.html
mods/shield/: index.html
mods/table/: index.html
pcb/: index.html
references/: index.html
search/: search_index.json
troubleshooting/: index.html
