[tool.poetry]
name = "omiocnc-x6-2200epl"
version = "0.0.1"
description = "documentation for cnc router - OmnioCNC X6-2200EPL"
authors = ["Stephen Eaton"]
license = "CC-A-SA"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^7.3.2"
mkdocs-mermaid2-plugin = "^0.5.1"
mkdocs-macros-plugin = "^0.5.5"
mkdocs-ezlinks-plugin = "^0.1.12"
pymdown-extensions = "^9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
